# velo

./: CHECKLIST.md  DEEP-RESEARCH.md  GEAR-FROM-VIDEOS.md  GPX-BRIEF.md  ITINERARY.md  LEG-EV15-Mittelbuchen-Karlsruhe.md  PACKING-LIST.md  README.md  ROUTE-GPX.md  ROUTES.md  VELO-REPO-NOTES.md  VIDEOS.md  WAYPOINTS.md  pyproject.toml  todo.md  trip_config.json
.antigravitycli/: 0add2668-e695-442b-9500-461c263ded45.json
config/: bike_profile.yml  bikes.json  watchlist.yml
data/: candidates.sqlite  review_sheet.html  route_summary.json  validation_report.json  waypoints.json
gpx/: .gitkeep  bruges_home_complete.gpx  day1_drocourt_bruges.gpx  day2_bruges_genk.gpx  day2_bruges_maastricht.gpx  day3_genk_andernach.gpx  day3_maastricht_bonn.gpx  day4_andernach_mittelbuchen.gpx  day4_bonn_mittelbuchen.gpx  day_jul4_nevers_paris.gpx  day_jul5-6_paris_drocourt.gpx  day_jul5_paris_drocourt_direct.gpx  ev15_mittelbuchen-mainz_to_karlsruhe.gpx  ev15_rhine.gpx  ev17_rhone.gpx  ev6_danube.gpx  ev7_central.gpx  ev8_med.gpx  return_a_mosel.gpx  return_b_flanders.gpx  return_b_paris.gpx  route_brussels_drocourt_home.gpx
launchd/: com.kian.velo-watch.scan.plist
scripts/: .gitignore  build_return_routes.py  build_routes.py  geocode.py  gpx_from_here.py  planner.py  route_waypoints.py  validate_route_alignment.py  validate_routes.py  velo-scan.sh  velo_trekking.brf
tests/: test_browserbase_scan.py  test_cli.py  test_config.py  test_db.py  test_env.py  test_matching.py
transcripts/: 1_5_Lessons_from_Cycling_the_Rockies.md  2_Cycling_the_Rockies_Day_4.md  (+5 more)
velo_watch/: __init__.py  (+11 more)
(+5 files in other folders)
