[project]
name = "velo-watch"
version = "0.1.0"
description = "Local stolen-bike marketplace watch, triage, and evidence tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "browserbase>=1",
  "playwright>=1.45",
]

[project.optional-dependencies]
vision = [
  "Pillow>=10",
  "pytesseract>=0.3.10",
]
test = [
  "pytest>=8",
]

[project.scripts]
velo-watch = "velo_watch.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["velo_watch*"]
